fix: scrollbar visible on splash screen

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -20,6 +20,13 @@ body {
   overflow: hidden;
 }
 
+main {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 #root {
   padding: 0;
   text-align: center;
